small additional fixies and checks to section 5

--- a/output/rosenbaum-disadvantage-gender_manual.tex
+++ b/output/rosenbaum-disadvantage-gender_manual.tex
@@ -1,10 +1,21 @@
-\begin{tabular}{ccccc}
+\begin{tabular}{l c}
 \toprule
-& Males vs. Females & & \mc{2}{c}{Alternatives vs. Home} \\
-& & & Males & Females \\
+\mc{1}{c}{Null Hypothesis} &  \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value \\
 \midrule
- \citet{Rosenbaum_2005_Distribution_JRSS}  & \\
-$p$-value & \textbf{0.007} & & \textbf{0.006} & 0.110 \\
+Control-group boys have the 	& \\
+same distribution of the latent &  \textbf{0.007}  \\
+ measure as control-group girls &   \\
+\midrule
+\midrule
+Control-group boys who attend &  \\
+ alternative childcare have the same & \textbf{0.006} \\
+distribution of the latent measure &  \\
+as control-group boys who stay at home &  \\
+\midrule
+Control-group girls who attend &  \\
+ alternative childcare have the same & 0.110 \\
+distribution of the latent measure &  \\
+as control-group girls who stay at home &  \\
 \bottomrule
 \end{tabular}
 
