edits on 1 and 5 to GD

--- a/sections/5_gender-differences.tex
+++ b/sections/5_gender-differences.tex
@@ -1,5 +1,5 @@
 
-As the treatment effects reported in Section~\ref{sec:treatment-effects} show, there are gender differences in the patterns of positive and significant treatment effects. Similar gender differences have been seen in previous work. We summarize this previous work in Table~\ref{tab:litreview-table}. Our aggregating statistics and discussion of the counterfactual scenario allow for us to better summarize the gender differences and hint at another mechanism that can be driving these differences in treatment effects.
+As the treatment effects reported in Section~\ref{sec:treatment-effects} show, there are gender differences in the patterns of positive and significant treatment effects. Similar gender differences have been seen in previous work. We summarize this previous work in Table~\ref{tab:litreview-table}. Our aggregating statistics and discussion of the counterfactual scenario allow for us to better summarize the gender differences and hint at mechanisms that can be driving these differences in treatment effects.
 
 Figure~\ref{fig:ppositive} shows the estimated combining functions of the proportion of outcomes for which the estimated treatment effect is positive. As we explain in Section~\ref{sec:parameters}, the null hypothesis is that the proportion of outcomes is equal to 50\%. Figure~\ref{fig:ppositivehome} displays the combining functions comparing ABC/CARE to those who stay at home. Figure~\ref{fig:ppositivealternative} displays the same comparing ABC/CARE to those who attended alternative childcare. Both of these estimates account for selection into the counterfactual scenario using matching, as described in Section~\ref{sec:parameters}.
 
