edits to sections 2,3,6 from JJH edits

--- a/sections/3_parameters.tex
+++ b/sections/3_parameters.tex
@@ -34,6 +34,8 @@ It is also useful to assess the average effectiveness of a program relative to a
 \Delta_j \left( V =1 \right) : =   \mathbb{E} \left[ Y_{j}^1 -  Y_{j}^0 | V = 1, W = 1 \right] := \mathbb{E} \left[ Y_{j}^1 -  Y_{j}^0 | V = 1, \bm{B} \in \mathcal{B}_0 \right].
 \end{equation}
 
+\textbf{[JJH: We never use these. Why bother to define?][We do use these and now highlight the estimates from the more in Section 5.]}
+
 Random assignment to treatment does not directly identify the parameters in Equations~\eqref{eq:cont1} or~\eqref{eq:cont2}. Econometric methods are required to identify these parameters. We rely on matching to control for selection into home or alternative preschool by the control group. Our procedure assumes that the observed characteristics are sufficient to describe the selection into alternative center-based arrangements. In Appendix~\ref{appendix:results}, we show the balance across the groups in the matched samples along the observed selection variables (e.g., family characteristics, Apgar scores, gender), further justifying this approach.\footnote{To select adequate variables for matching, we conduct goodness of fit tests to find the most predictive set of baseline characteristics subject to penalty for adding parameters. This procedure is fully explained in Appendix~\ref{appendix:results}.}
 
 We report estimates from alternative empricial strategies, including instrumental variables and control functions, in Appendix~\ref{appendix:amethodology}. The results from these alternative strategies are consistent with our main results but lack precision. Appendix~\ref{appendix:vsensitivity-controlsub} displays results with alternative definitions of $V$ (i.e., different thresholds define if a child attended alternative preschool). The results are robust to the various definitions. What matters is whether any center-based child care is being used ($V>0$), and not the specific value of $V$.
@@ -51,9 +53,9 @@ C_\ell = \sum^{B_\ell}_{j=1} \bm{1} (\Delta_{j} >0),
 
 Under the null hypothesis of no treatment effect for the block of outcomes indexed by $\mathcal{J}_\ell$, and assuming the validity of asymptotic approximations, $C_\ell / B_\ell$ is centered at $\frac{1}{2}$. We compute the fraction $C_\ell / B_\ell$ and the corresponding bootstrapped empirical distribution to obtain a $p$-value. The bootstrap procedure accounts for dependence in unobservables across outcomes (within blocks) in a general way.
 
-Our test based on the number of outcomes for which the treatment effect is significant at the $10\%$ level is similar. Under the null hypothesis, 10\% of all outcomes should be ``significant'' at the 10\% level even if there is no treatment effect of the program.\footnote{In this case, we perform a ``double bootstrap'' procedure to first determine significant treatment effects at $10\%$ level and then calculate the standard error of the count.} The combining functions avoid: (i) arbitrarily picking outcomes that have statistically significant effects---``cherry picking''; or (ii) arbitrarily selecting blocks of outcomes to correct the $p$-values when accounting for multiple hypothesis testing. We present $p$-values for these hypotheses and a number of combining functions by outcome category in Appendix~\ref{appendix:results}.\footnote{In Appendix~\ref{appendix:results}, we present yet another alternative. We calculate a ``latent'' outcome out of the set of outcomes within a block and perform inference on this latent outcome. This analysis also points to beneficial effects of the program.}
+Our test based on the number of outcomes for which the treatment effect is significant at the $10\%$ level is similar. Under the null hypothesis, 10\% of all outcomes should be ``significant'' at the 10\% level even if there is no treatment effect of the program.\footnote{In this case, we perform a ``double bootstrap'' procedure to first determine significant treatment effects at $10\%$ level and then calculate the standard error of the count.} The combining functions avoid: (i) arbitrarily picking outcomes that have statistically significant effects---``cherry picking''; or (ii) arbitrarily selecting blocks of outcomes to correct the $p$-values when accounting for multiple hypothesis testing. We present $p$-values for these hypotheses and a number of combining functions by outcome category in Appendix~\ref{appendix:results}.\footnote{In Appendix~\ref{appendix:results}, we present yet another alternative. We calculate a latent measure, using principal component analysis, of the set of outcomes within a block and perform inference on this latent measure. This analysis also points to beneficial effects of the program.}
 
-\textbf{An Exact Non-Parametric Test.} We also test for equality of treatment and control distributions by outcome using an exact test developed by \citet{Rosenbaum_2005_Distribution_JRSS}. We provide a brief explanation of the test and refer interested readers to the original source for more details. Let $\mathcal{N}$ index the individuals in our sample and consider the block of outcomes $\mathcal{J}_\ell$. Let $d_{ii'}$ be the distance between the individuals $i, i' \in \mathcal{N}$, $i \neq i'$, based on the outcomes in $\mathcal{J}_\ell$. In our application, this is the Mahalanobis distance \citep{Mahalanobis_1936_PNISI}. There is an optimal non-bipartite pairing of individuals according to $d_{ii'}$ \citep{Derigs_1988_Solving_AOR}. This is obtained by minimizing the distance across all possible pairings $i, i'$ in the sample.
+\textbf{An Exact Non-Parametric Test.} We also test for equality of treatment and control distributions by outcome using an exact test developed by \citet{Rosenbaum_2005_Distribution_JRSS}. We provide a brief explanation of the test and refer interested readers to the original source for more details. Let $\mathcal{N}$ index the individuals in our sample and consider the block of outcomes $\mathcal{J}_\ell$. Let $d_{ii'}$ be the distance between the individuals $i, i' \in \mathcal{N}$, $i \neq i'$, based on the outcomes in $\mathcal{J}_\ell$. In our application, this is the Mahalanobis distance \citep{Mahalanobis_1936_PNISI}. There is an optimal non-bipartite pairing of individuals according to $d_{ii'}$ \citep{Derigs_1988_Solving_AOR}. This is obtained by minimizing the distance across all possible pairings $i, i'$ in the sample. \textbf{[JJH: We want tests of boy treatment vs. girl treatment, boy control vs. girl control.][We now include these results in Table 1. We apply the Rosenbaum test to provide another source of inference for those comparisons.]}
 
 Under the null hypothesis of no treatment effects, pairings of treatment-group children with control-group children should be as frequent as pairings of treatment-group children with other treatment-group children and control-group children with other control-group children. If a relatively large number of pairs are matched equally across groups using this metric, we fail to reject the null hypothesis that the joint distribution of outcomes in block $\mathcal{J}_{\ell}, \ell \in \{1,\dots ,L\}$ is the same across the treatment and control groups.
 
