corrections to paper

--- a/abc_treatmenteffects.tex
+++ b/abc_treatmenteffects.tex
@@ -97,7 +97,7 @@ Email: aziff@uchicago.edu                     &  \\
 \label{sec:parameters}
 \input{sections/3_parameters}
 
-\section{Estimates and Tests}
+\section{Estimates and Tests of Treatment Differences}
 \label{sec:treatment-effects}
 \input{sections/4_treatment-effects}
 
