--- a/output/rosenbaum-disadvantage-gender_manual.tex
+++ b/output/rosenbaum-disadvantage-gender_manual.tex
@@ -1,21 +1,15 @@
-\begin{tabular}{l c}
+\begin{tabular}{c c c}
 \toprule
-\mc{1}{c}{Null Hypothesis} &  \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value \\
+& \mc{1}{c}{$H_0$} &  \citet{Rosenbaum_2005_Distribution_JRSS} $p$-value \\
 \midrule
-Control-group boys have the 	& \\
-same distribution of the latent &  \textbf{0.007}  \\
- measure as control-group girls &   \\
+$[1]$ & All Controls & \\
+& Male $=$ female   &  \textbf{0.007}  \\
 \midrule
+$[2]$ & Males & \\
+& Alternative $=$ Stay at Home & \textbf{0.006} \\
 \midrule
-Control-group boys who attend &  \\
- alternative childcare have the same & \textbf{0.006} \\
-distribution of the latent measure &  \\
-as control-group boys who stay at home &  \\
-\midrule
-Control-group girls who attend &  \\
- alternative childcare have the same & 0.110 \\
-distribution of the latent measure &  \\
-as control-group girls who stay at home &  \\
+$[3]$ & Females & \\
+& Alternative $=$ Stay at Home & 0.110 \\
 \bottomrule
 \end{tabular}
 
