--- a/sections/5_gender-differences.tex
+++ b/sections/5_gender-differences.tex
@@ -1,11 +1,14 @@
 
-As the treatment effects reported in Section~\ref{sec:treatment-effects} show, there are gender differences in the patterns of positive and significant treatment effects. Similar gender differences have been seen in previous work. We summarize this previous work in Table~\ref{tab:litreview-table}. Our aggregating statistics and discussion of the counterfactual scenario allow for us to better summarize the gender differences and hint at mechanisms that can be driving these differences in treatment effects.
+As the treatment effects reported in Section~\ref{sec:treatment-effects} show, there are gender differences in the patterns of positive and significant treatment effects. Similar gender differences have been seen in previous work. We summarize this previous work in Table~\ref{tab:litreview-table}. Our aggregating statistics and discussion of the counterfactual scenario allow for us to better summarize the gender differences and hint at other mechanisms that can be driving these differences in treatment effects.
 
-Figure~\ref{fig:ppositive} shows the estimated combining functions of the proportion of outcomes for which the estimated treatment effect is positive. As we explain in Section~\ref{sec:parameters}, the null hypothesis is that the proportion of outcomes is equal to 50\%. Figure~\ref{fig:ppositivehome} displays the combining functions comparing ABC/CARE to those who stay at home. Figure~\ref{fig:ppositivealternative} displays the same comparing ABC/CARE to those who attended alternative childcare. Both of these estimates account for selection into the counterfactual scenario using matching, as described in Section~\ref{sec:parameters}.
+Figure~\ref{fig:ppositive} shows the estimated combining functions of the proportion of outcomes for which the estimated treatment effect is positive. We focus on the combining functions in this section to highlight the gender differences by counterfactual scenario. Appendix~\ref{appendix:results} has estimates of individual treatment effects as well as more estimated combining functions. Similar patterns in gender differences can be seen in these additional results as well.
+
+As we explain in Section~\ref{sec:parameters}, the null hypothesis is that the proportion of outcomes is equal to 50\%. Figure~\ref{fig:ppositivehome} displays the combining functions comparing ABC/CARE to those who stay at home. Figure~\ref{fig:ppositivealternative} displays the same comparing ABC/CARE to those who attended alternative childcare. Both of these estimates account for selection into the counterfactual scenario using matching, as described in Section~\ref{sec:parameters}.
 
 Comparing ABC/CARE to those who stay at home (Figure~\ref{fig:ppositivehome}), a higher proportion of the treatment effects are positive for women than for men. The female proportion is 25 percentage points larger than the male proportion. While the female proportion is significantly larger than 50\%, the standard error male proportion crosses the 50\%. We cannot reject the null hypothesis that ABC/CARE had more positive treatment effects for men relative to staying at home. 
 
 Figure~\ref{fig:ppositivealternative} shows a different pattern comparing ABC/CARE to those who attended alternative childcare. Close to 75\% of the treatment effects are positive for men and we can reject the null hypothesis that ABC/CARE had more positive treatment effects for men relative to alternative childcare. For women, the proportion of positive treatment effects is similar to that comparing ABC/CARE to those who stay at home and is also statistically significantly different from 50\%. From these estimated combining functions, we can conclude that ABC/CARE was effective for men compared to alternative childcare, but not when compared to staying at home. ABC/CARE was effective for women regardless of the counterfactual scenario. 
+
 
 \begin{figure}[!htbp]
 \centering
@@ -28,7 +31,6 @@ We next show the estimated combining functions disaggregated by outcome category
 
 Comparing the male proportions across counterfactual scenarios, we find that ABC/CARE is more effective compared to alternative childcare than compared to staying at home. The exceptions to this pattern are seen in HOME scores and education. The opposite pattern is seen for women. The female proportions are larger comparing ABC/CARE to staying at home than comparing ABC/CARE to alternative childcare. Although in aggregating across all outcome categories, ABC/CARE seems equally effective for women by counterfactual scenario, disaggregating reveals that there are some outcome categories for which the proportions comparing ABC/CARE to staying at home are larger than comparing ABC/CARE to alternative childcare. These categories include HOME scores, mental health, employment and income, and crime. These results indicate that ABC/CARE is more effective for women when compared to staying at home and more effective for men when compared to alternative childcare.
 
-
 \begin{figure}[H]
  \centering
  \caption{Proportion of Positively Impacted Outcomes by Category}\label{fig:cats-positive}
@@ -47,6 +49,10 @@ Comparing the male proportions across counterfactual scenarios, we find that ABC
 \footnotesize \justify
 \textbf{Note:} Panel (a) displays the percentage of positive treatment effects by outcome category in accordance with the parameter in Equation~\eqref{eq:cont1}---treatment vs. staying at home---by gender. Panel (b) is analogous for Equation~\eqref{eq:cont2}---treatment vs.\ alternative childcare. Standard errors are based on the empirical bootstrap distribution. The null hypothesis is that the proportions of positive treatment effects are greater than 50\%. For a full list of the estimated combining functions, see Appendix~\ref{appendix:results}. \\
  \end{figure}
+ 
+\textbf{[JJH:][Figure~\ref{figure:altgender}: What does this show? It is different.][We refer to this in text. The distributions are very similar and the differences are quite small.]}
+\textbf{[JJH:][Figure~\ref{figure:socdis}: What are the corresponding treatment effects? (By strata).]}
+\textbf{[Unfortunately, we do not have the power to estimate these treatment effects by strata.]}
 
 \begin{sidewaysfigure}[!htpb]
 \centering
@@ -76,7 +82,7 @@ Comparing the male proportions across counterfactual scenarios, we find that ABC
 \textbf{Note:} Panel (a) displays the cumulative distribution function of enrollment in alternatives by gender. Panel (b) displays how girls and boys separately fit into the overall (girls and boys pooled) distribution of socioeconomic disadvantage. Panel (c) displays how girls who did not enroll and girls who enrolled in alternatives fit into the overall female distribution of socioeconomic disadvantage. Panel (d) is analogous to Panel (c) for boys. Our measure of socioeconomic disadvantage is a latent of the following variables: Maternal age, education, and IQ, as well as number of siblings and HRI score.
 \end{sidewaysfigure}
 
-This difference suggests that boys and girls faced different situations in their counterfactual environments, especially in the home environments. Table~\ref{table:controlsubscharacteristics} summarizes the baseline characteristics by gender and counterfactual scenario. Approximately the same proportion of control-group girls attended alternative childcare (73\%)  as control-group boys (76\%). We confirm that the take-up of amount alternative childcare is similar across genders in Figure~\ref{figure:altgender}. 
+This difference suggests that boys and girls faced different situations in their counterfactual environments, especially in the home environments. Table~\ref{table:controlsubscharacteristics} summarizes the baseline characteristics by gender and counterfactual scenario. Approximately the same proportion of control-group girls attended alternative childcare (73\%)  as control-group boys (76\%). We confirm that the take-up of amount alternative childcare is similar across genders in Figure~\ref{figure:altgender}. Although slightly more boys attend more alternative childcare, this difference is small.
 
 Maternal employment of mothers of girls is the only statistically significant difference between those who stayed at home and those who attended alternative childcare. No girls who stayed at home had working mothers while 23\% of the girls who attended alternative childcare had working mothers. For boys, 14\% of those who stayed at home had working mothers while 29\% of those who attended alternative childcares had working mothers. As we show in Section~\ref{sec:treatment-effects}, ABC/CARE increases maternal income. It is also clear that control-group children who attend alternative childcare are more likely to have working mothers. Pooling genders, 26\% of those who attended alternative childcare had working mothers versus 8\% of those who stayed at home. Although the alternative childcares were not substitutes for ABC/CARE in terms of quality, educational offerings, or child outcomes, they did provide between 3 and 8 hours of childcare per day to allow the mothers to work (or continue working).
 
@@ -93,20 +99,20 @@ Maternal employment of mothers of girls is the only statistically significant di
 
 The difference in maternal labor supply indicates that there is some special difference in the family characteristics of control-group boys who stayed at home relative to control-group boys who attended alternative care and control-group girls. The control-group boys who stayed at home also have older mothers, more fathers present, lower HRI scores, and more siblings than any of the other subgroups. Of course, these characteristics are interrelated. For example, having a father at home implies that the family income is higher. This is due to the father brining additional income rather than the presence of the father allowing the mother to work, given that the association between father's presence and maternal employment is weak. 
 
-To formally test the differences in control-group girls and boys, we create a latent measure of socioeconomic disadvantage at baseline using the following variables: Mother's age, education, IQ, marital status, and employment, as well as number of children and father's presence at home. We assess how girls and boys fit into the overall distribution of this latent in the control group. Boys are disproportionately more advantaged than girls (Panel~\ref{figure:disadgender}). Because girls' families were more resource constrained if compared to their male counterparts, girls in the control group were taken care of in a more disadvantaged environment or went to lower-quality preschools. Thus, they benefited more than boys when compared to the next best alternative as perceived by their parents, as documented in Section~\ref{sec:treatment-effects}.
+To formally test the differences in control-group girls and boys, we create a latent measure of socioeconomic disadvantage at baseline using the following variables: Mother's age, education, IQ, marital status, and employment, as well as number of children and father's presence at home. We assess how girls and boys fit into the overall distribution of this latent measure in the control group. Boys are disproportionately more advantaged than girls (Panel~\ref{figure:disadgender}). Because girls' families were more resource constrained if compared to their male counterparts, girls in the control group were taken care of in a more disadvantaged environment or went to lower-quality preschools. Thus, they benefited more than boys when compared to the next best alternative as perceived by their parents, as documented in Section~\ref{sec:treatment-effects}.
 
 Table~\ref{table:disadtests} uses the latent measure to test the difference in disadvantage across boys and girls. We reject the null of a common distribution of our measure of socioeconomic disadvantage across girls and boys (at baseline). In Panels~\ref{figure:disadgirls} and~\ref{figure:disadboys} of Figure~\ref{figure:socdis}, we further dissect socioeconomic disadvantage within genders, and provide the corresponding tests in Table~\ref{table:disadtests}.
 
 \begin{table}[!htpb]
 \begin{threeparttable}
-\caption{Gender and Baseline Socioeconomic Disadvantage in the Control Group, Tests} \label{table:disadtests}
+\caption{Gender and Baseline Socioeconomic Disadvantage in the Control Group} \label{table:disadtests}
 \centering
 \begin{tabularx}{16.5cm}{XcX}
 & \input{output/rosenbaum-disadvantage-gender_manual.tex} &
 \end{tabularx}
 \begin{tablenotes}
 \footnotesize
-\item \textbf{Note:} This table presents the null of a distribution of the latent measure of socioeconomic disadvantage (mother's age, education, IQ, marital status, and employment, as well as number of siblings and father's presence at home) between males and females in the control group and between children who attended  alternative preschool and who stayed at home (within control-group boys or within control-group girls). The $p$-values follow \citet{Rosenbaum_2005_Distribution_JRSS}. Under the null hypothesis, the pairs with the closest distance in disadvantage would be comprised of one male and one female (for the comparison of males vs. females). Rejecting the null implies that the distributions are significantly different. Statistics significant at the $0.10$ level are bolded.
+\item \textbf{Note:} Row [1] displays an exact, non-parametric $p$-value for the null hypothesis that the control males and control females have the same level of disadvantage. Row [2] displays the same $p$-value for the null  hypothesis that within males, those who attend alternative childcare and those who stay at home have the same level of disadvantage. Row [3] is analogous to Row [2] except for females. These tests all use a latent measure of socioeconomic disadvantage (mother's age, education, IQ, marital status, and employment, as well as number of siblings and father's presence at home). Under the null hypotheses, the pairs with the closest distance in disadvantage would be comprised of one male and one female (for the comparison of males vs. females). Rejecting the null implies that the distributions are significantly different. Statistics significant at the $0.10$ level are bolded.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
